src/app/components/Cover/_index.scss
.Cover {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  overflow: hidden;
  position: relative;
  margin-top: 0;
  line-height: 1.5;

  &.is-richtext {
    min-height: 100vh;
  } 

  @media #{$mq-landscape} and #{$mq-not-lg}, #{$mq-lg} {
    min-height: 56.25vw;
    min-height: calc(var(--root-width) * 9 / 16);
  }

  &.is-heading,
  &.is-richtext {
    background-color: $color-black;
  }

  &.is-richtext {
    justify-content: center;
  }
}

.Cover-media {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  &.is-fixed {
    clip: rect(0, auto, auto, 0);
    -webkit-clip-path: inset(0 0 0 0);
    clip-path: inset(0 0 0 0);

    & > * {
      position: fixed;
      transform: translateZ(0);
      -webkit-backface-visibility: hidden;
      backface-visibility: hidden;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
  }

  &.is-beyond {
    position: absolute;
    top: auto;
    bottom: 0;
  }

  .is-richtext & {
    max-height: 100vh;

    &.is-fixed {
      max-height: none;
    }
  }

  .is-caption &,
  .is-heading & {
    position: static;
    height: auto;
  }

  .is-heading &::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: $gradient-vertical-40-0-80-60;
  }

  .is-richtext &::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: $color-black-transparent-30;
  }

  @media #{$mq-lg} {
    .is-left &::after,
    .is-right &::after {
      content: "";
      z-index: 1;
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background-image: $gradient-horizontal-40-45-65-0;
    }

    .is-right &::after {
      transform: scaleX(-1);
    }

    .is-left & *::after,
    .is-right & *::after {
      background-color: transparent;
      background-image: $gradient-vertical-50-0-100-60;
    }
  }

  .is-piecemeal &::after,
  .is-piecemeal & *::after {
    content: none;
  }

  > * {
    height: 100%;
  }

  video {
    z-index: -1;
  }
}

.Cover-content {
  position: relative;
  z-index: 1;

  .is-richtext > & {

    &:nth-child(2):last-child {
      padding-top: 5rem;
      padding-bottom: 5rem;

      & > :last-child {
        margin-bottom: 0;
      }
    }

    &::before {
      content: "";
      position: absolute;
      top: 0;
      left: 50%;
      z-index: -1;
      transform: translateX(-50%);
      width: calc(#{cells(10)} + .75rem);
      height: 100%;
      background-color: $color-black-transparent-30;

      @media #{$mq-md} {
        width: calc(#{cells(10)} + 1.75rem);
      }

      @media #{$mq-lg} {
        width: calc(#{cells(8)} + 2rem);
      }
    }

    & > * {
      @media #{$mq-sm} {
        width: cells(10);
      }
    }
  }

  .is-piecemeal > & {
    margin-top: 40vh;
    margin-bottom: 40vh;
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;;

    @media #{$mq-lg} {
      padding-top: 2.25rem;
      padding-bottom: 2.25rem;
    }

    &:nth-child(2) {
      margin-top: 80vh;
    }

    &:last-child {
      margin-bottom: 80vh;
    }

    &::before {
      background-color: $color-black-transparent-60;
    }

    & > * {
      margin-bottom: 0;
    }

    & > h4,
    & > p,
    & > ul li,
    & > ol li,
    & > blockquote {
      @media #{$mq-md} {
        font-size: 1.25rem;
      }

      @media #{$mq-lg} {
        font-size: 1.375rem;
      }
    }
  }

  .is-richtext > & [class*="u-pull"] {
    float: none;
    margin-left: auto;
    margin-right: auto;
    width: cells(10);

    @media #{$mq-lg} {
      width: cells(8);
    }
  }

  @media #{$mq-lg} {
    .is-richtext.is-left > &,
    .is-richtext.is-right > & {
      width: 49.5rem;
    }

    .is-richtext.is-left > & {
      margin-left: calc(30% - 24.75rem);
    }
    .is-richtext.is-right > & {
      margin-right: calc(30% - 24.75rem);
    }
  }

  .is-heading > & {
    position: absolute;
    bottom: 0;
    max-width: 100%;
  }

  .is-heading > & {
    width: 100%;
  }
}

.Cover-content > h2 {
  .is-heading & {
    margin-top: 3rem;
    margin-right: auto;
    margin-bottom: 3rem;
    margin-left: auto;
    font-family: $font-serif;
    font-size: 2rem;
    text-align: center;

    @media #{$mq-not-sm} {
      font-size: 3rem;
    }

    @media #{$mq-md} {
      margin-top: 6rem;
      margin-bottom: 6rem;
    }

    @media #{$mq-lg} {
      margin-top: 7rem;
      margin-bottom: 7rem;
    }
  }
}

